--- a/advanced-css-course-master/Natours/final-after-S06/index.html
+++ b/advanced-css-course-master/Natours/final-after-S06/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
-        <title>Natours | Exciting tours for adventurous people</title>
+        <title>My portfolio project overview -- 5 projects</title>
     </head>
 
     <body>
@@ -27,11 +27,11 @@
 
             <nav class="navigation__nav">
                 <ul class="navigation__list">
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natous</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benfits</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>what to expect here</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Four project cards</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>when, how, and why explained</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>My future goals</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Contact me now</a></li>
                     </ul>
             </nav>
         </div>
@@ -43,11 +43,11 @@
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary--main">Outdoors</span>
+                    <span class="heading-primary--main">WebDev</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated">Discover Tonyleekorea</a>
             </div>
         </header>
 
@@ -55,19 +55,19 @@
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        Exciting tours for adventurous people
+                        What to expect from <span>now on</span>
                     </h2>
                 </div>
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with the way I work to build my career</h3>
                         <p class="paragraph">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
                             ducimus quam nisi exercitationem omnis earum qui.
                         </p>
 
-                        <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Simple and humble beginning</h3>
                         <p class="paragraph">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
                         </p>
