almost completed my work overview sites and ready to be deployed

--- a/advanced-css-course-master/Natours/final-after-S06/index.html
+++ b/advanced-css-course-master/Natours/final-after-S06/index.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+export css from './css';
+export img from './img';
+export package from './package.json';
+export sass from './sass';<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -61,7 +64,7 @@
 
                 <div class="row">
                     <div class="col-1-of-2">
-                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with the way I work to build my career</h3>
+                        <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with the way I work, to build my career</h3>
                         <p class="paragraph">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
                             ducimus quam nisi exercitationem omnis earum qui.
@@ -72,7 +75,7 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nulla deserunt voluptatum nam.
                         </p>
 
-                        <a href="#" class="btn-text">Learn more &rarr;</a>
+                        <a  data-type="externalLink" href="#myinfo" class="btn-text">Learn more &rarr;</a>
                     </div>
                     <div class="col-1-of-2">
                         <div class="composition">
@@ -111,7 +114,7 @@
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-world"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Codepen playground</h3>
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
                             </p>
@@ -121,7 +124,7 @@
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-compass"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">Meet nature</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">first hard coding</h3>
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
                             </p>
@@ -131,7 +134,7 @@
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-map"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">ecommerce moudule exposure</h3>
                              <p class="feature-box__text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
                             </p>
@@ -141,7 +144,7 @@
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-heart"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">blog and wordpress</h3>
                             <p class="feature-box__text">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
                             </p>
@@ -153,7 +156,7 @@
             <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        Most popular tours
+                        My work evaluation
                     </h2>
                 </div>
 
@@ -165,25 +168,25 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                                    <span class="card__heading-span card__heading-span--1">all-round player</span>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
-                                        <li>3 day tours</li>
-                                        <li>Up to 30 people</li>
-                                        <li>2 tour guides</li>
-                                        <li>Sleep in cozy hotels</li>
-                                        <li>Difficulty: easy</li>
+                                        <li>codepn and github pro</li>
+                                        <li>100+ pen and 27 repos</li>
+                                        <li>bootstrap </li>
+                                        <li>mobile first concept</li>
+                                        <li>playing with plugins</li>
                                     </ul>
                                 </div>
                            </div>
                            <div class="card__side card__side--back card__side--back-1">
                                 <div class="card__cta">
                                     <div class="card__price-box">
-                                        <p class="card__price-only">Only</p>
-                                        <p class="card__price-value">$297</p>
+                                        <p class="card__price-only">HTML CSS level</p>
+                                        <p class="card__price-value">85++</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">check it out!</a>
                                 </div>
                             </div>
                        </div>
@@ -197,15 +200,15 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--2">The Forest Hiker</span>
+                                    <span class="card__heading-span card__heading-span--2">hard coding</span>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
-                                        <li>7 day tours</li>
-                                        <li>Up to 40 people</li>
-                                        <li>6 tour guides</li>
-                                        <li>Sleep in provided tents</li>
-                                        <li>Difficulty: medium</li>
+                                        <li>w3 standard/li>
+                                        <li>design guide</li>
+                                        <li>audience ananlysis</li>
+                                        <li>wireframe and adobe application</li>
+                                        <li>man-hour: 3 days/li>
                                     </ul>
                                 </div>
 
@@ -213,10 +216,10 @@
                             <div class="card__side card__side--back card__side--back-2">
                                 <div class="card__cta">
                                     <div class="card__price-box">
-                                        <p class="card__price-only">Only</p>
-                                        <p class="card__price-value">$497</p>
+                                        <p class="card__price-only">HTML CSS level</p>
+                                        <p class="card__price-value">90++</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">check it out!</a>
                                 </div>
                             </div>
                         </div>
@@ -230,15 +233,15 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
+                                    <span class="card__heading-span card__heading-span--3">e-commerce & module</span>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
-                                        <li>5 day tours</li>
-                                        <li>Up to 15 people</li>
-                                        <li>3 tour guides</li>
-                                        <li>Sleep in provided tents</li>
-                                        <li>Difficulty: hard</li>
+                                        <li>manual application</li>
+                                        <li>working within guidelines</li>
+                                        <li>extensive research</li>
+                                        <li>Sleepless nights</li>
+                                        <li>man-hour: over 3 weeks</li>
                                     </ul>
                                 </div>
 
@@ -246,10 +249,10 @@
                             <div class="card__side card__side--back card__side--back-3">
                                 <div class="card__cta">
                                     <div class="card__price-box">
-                                        <p class="card__price-only">Only</p>
-                                        <p class="card__price-value">$897</p>
+                                        <p class="card__price-only">PHP & jquery</p>
+                                        <p class="card__price-value">60++</p>
                                     </div>
-                                    <a href="#popup" class="btn btn--white">Book now!</a>
+                                    <a href="#popup" class="btn btn--white">check it out</a>
                                 </div>
                             </div>
                         </div>
@@ -257,7 +260,7 @@
                 </div>
 
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="#" class="btn btn--green">Discover all tours</a>
+                    <a href="#" class="btn btn--green">Live preview!</a>
                 </div>
             </section>
 
@@ -272,7 +275,7 @@
 
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        We make people genuinely happy
+                        when, how and why explained
                     </h2>
                 </div>
 
@@ -280,10 +283,10 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
-                            <figcaption class="story__caption">Mary Smith</figcaption>
+                            <figcaption class="story__caption">my farm</figcaption>
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">I run a small farm and wanted a mental exercise to invigorate my life.</h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
                                 ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
@@ -297,10 +300,10 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
-                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                            <figcaption class="story__caption">my passion</figcaption>
                         </figure>
                         <div class="story__text">
-                            <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now. As my  passion is yoga and will be always; web development is fast catching up.</h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur libero repellat quis consequatur
                                 ducimus quam nisi exercitationem omnis earum qui. Aperiam, ipsum sapiente aspernatur libero
@@ -311,7 +314,7 @@
                 </div>
 
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="#" class="btn-text">Read all stories &rarr;</a>
+                    <a href="#" class="btn-text">Read more how </br>I combined my passion into work &rarr;</a>
                 </div>
             </section>
 
@@ -322,7 +325,7 @@
                             <form action="#" class="form">
                                 <div class="u-margin-bottom-medium">
                                     <h2 class="heading-secondary">
-                                        Start booking now
+                                        if you care to hire me, long-term or long-distance.
                                     </h2>
                                 </div>
 
@@ -341,7 +344,7 @@
                                         <input type="radio" class="form__radio-input" id="small" name="size">
                                         <label for="small" class="form__radio-label">
                                             <span class="form__radio-button"></span>
-                                            Small tour group
+                                            long-term
                                         </label>
                                     </div>
 
@@ -349,7 +352,7 @@
                                         <input type="radio" class="form__radio-input" id="large" name="size">
                                         <label for="large" class="form__radio-label">
                                             <span class="form__radio-button"></span>
-                                            Large tour group
+                                            relocation
                                         </label>
                                     </div>
                                 </div>
@@ -390,10 +393,8 @@
                 </div>
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
-                        Built by <a href="#" class="footer__link">Jonas Schmedtmann</a> for his online course <a href="#" class="footer__link">Advanced CSS and Sass</a>.
-                        Copyright &copy; by Jonas Schmedtmann. You are 100% allowed to use this webpage for both personal
-                        and commercial use, but NOT to claim it as your own design. A credit to the original author, Jonas
-                        Schmedtmann, is of course highly appreciated!
+                        Built by <a href="#" class="footer__link">병남이</a> for Mr. Lim, my teacher <a href="#" class="footer__link">tonyleekorea all rights reserved</a>.
+                        Copyright &copy; by Tonyleekorea! This design and contents are made available in the CSS course I took as a part of NCS. Many thanks to my teachers, especially Mr. Lim
                     </p>
                 </div>
             </div>
@@ -407,8 +408,8 @@
                 </div>
                 <div class="popup__right">
                     <a href="#section-tours" class="popup__close">&times;</a>
-                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <h2 class="heading-secondary u-margin-bottom-small">Your search stops righ here with me.</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Congrats &ndash; You just won the great mind and talent. Don't miss it.</h3>
                     <p class="popup__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
@@ -420,7 +421,7 @@
                         vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
                         euismod nisi porta.
                     </p>
-                    <a href="#" class="btn btn--green">Book now</a>
+                    <a href="#" class="btn btn--green">check it out now!</a>
                 </div>
             </div>
         </div>
@@ -494,6 +495,7 @@
             </div>
         </section>
         -->
-
+        <a name="myinfo"></a>
+        <div id ="infogram" class="infogram-embed" data-id="1de8371e-9b72-40c6-9534-c657f03de203" data-type="interactive" data-title="tonyleekorea Learning Curves"></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script")[0],d=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=d+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var r=e.createElement("script");r.async=1,r.id=s,r.src=i,o.parentNode.insertBefore(r,o)}}(document,0,"infogram-async","https://e.infogram.com/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogram.com/1de8371e-9b72-40c6-9534-c657f03de203" style="color:#989898!important;text-decoration:none!important;" target="_blank" name="infogram">tonyleekorea Learning Curves</a><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div>
     </body>
 </html>
