to fix card effect bugs, updated the prior commit with new ones.

--- a/advanced-css-course-master/Natours/final-after-S06/index.html
+++ b/advanced-css-course-master/Natours/final-after-S06/index.html
@@ -174,7 +174,7 @@ export sass from './sass';<!DOCTYPE html>
                                     <ul>
                                         <li>codepn and github pro</li>
                                         <li>100+ pen and 27 repos</li>
-                                        <li>bootstrap </li>
+                                        <li>bootstrap</li>
                                         <li>mobile first concept</li>
                                         <li>playing with plugins</li>
                                     </ul>
@@ -204,11 +204,11 @@ export sass from './sass';<!DOCTYPE html>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
-                                        <li>w3 standard/li>
+                                        <li>w3 standard</li>
                                         <li>design guide</li>
                                         <li>audience ananlysis</li>
                                         <li>wireframe and adobe application</li>
-                                        <li>man-hour: 3 days/li>
+                                        <li>man-hour: 3 days</li>
                                     </ul>
                                 </div>
 
