updated texts on my career feature and cards, not able to fix the ccard flip but with chrome, firefox

--- a/advanced-css-course-master/Natours/final-after-S06/index.html
+++ b/advanced-css-course-master/Natours/final-after-S06/index.html
@@ -1,7 +1,4 @@
-export css from './css';
-export img from './img';
-export package from './package.json';
-export sass from './sass';<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -44,13 +41,14 @@ export sass from './sass';<!DOCTYPE html>
                 <img src="img/logo-white.png" alt="Logo" class="header__logo">
             </div>
 
-            <div class="header__text-box">
+            <div class="header__text-box icon-basic-webpage-multiple:before">
                 <h1 class="heading-primary">
                     <span class="heading-primary--main">WebDev</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#section-tours" class="btn btn--white btn--animated">Discover Tonyleekorea</a>
+                <a href="#section-tours" class="btn btn--white btn--animated" style="letter-spacing:1.1vh;">Discover Tonyleekorea</a>
+                <h2>who has 36 years more left</h2>
             </div>
         </header>
 
@@ -58,7 +56,7 @@ export sass from './sass';<!DOCTYPE html>
             <section class="section-about">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        What to expect from <span>now on</span>
+                        What to expect from <span style="color: rgba(106, 142, 35, 0.3);">now on</span>
                     </h2>
                 </div>
 
@@ -114,9 +112,9 @@ export sass from './sass';<!DOCTYPE html>
                     <div class="col-1-of-4">
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-world"></i>
-                            <h3 class="heading-tertiary u-margin-bottom-small">Codepen playground</h3>
+                            <h3 class="heading-tertiary u-margin-bottom-small">Codepen github playground</h3>
                             <p class="feature-box__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                                persistantance in mastering key features is the prevailing attitude.
                             </p>
                         </div>
                     </div>
@@ -156,12 +154,12 @@ export sass from './sass';<!DOCTYPE html>
             <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                        My work evaluation
+                       Most popular self-evaluation
                     </h2>
                 </div>
 
                 <div class="row">
-                    <div class="col-1-of-3">
+                    <div class="col-1-of-3 flex-container" style="display:flex">
                        <div class="card">
                            <div class="card__side card__side--front">
                                 <div class="card__picture card__picture--1">
@@ -172,11 +170,10 @@ export sass from './sass';<!DOCTYPE html>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
-                                        <li>codepn and github pro</li>
-                                        <li>100+ pen and 27 repos</li>
-                                        <li>bootstrap</li>
+                                        <li>codepn and github pro: 100+ pens and 27 repos</li>
+                                        <li>Gulp/webpack: mixin,BEM for playing with plugins</li>
+                                        <li>bootstrap/wordpress; multiple installation</li>
                                         <li>mobile first concept</li>
-                                        <li>playing with plugins</li>
                                     </ul>
                                 </div>
                            </div>
@@ -200,14 +197,14 @@ export sass from './sass';<!DOCTYPE html>
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--2">hard coding</span>
+                                    <span class="card__heading-span card__heading-span--2">hard coding &Rarr;this one</span>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
-                                        <li>w3 standard</li>
-                                        <li>design guide</li>
-                                        <li>audience ananlysis</li>
-                                        <li>wireframe and adobe application</li>
+                                        <li>tech savvy</li>
+                                        <li>perspective animation</li>
+                                        <li>research</li>
+                                        <li>working utilizing wireframe and adobe apps</li>
                                         <li>man-hour: 3 days</li>
                                     </ul>
                                 </div>
@@ -409,19 +406,17 @@ export sass from './sass';<!DOCTYPE html>
                 <div class="popup__right">
                     <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-small">Your search stops righ here with me.</h2>
-                    <h3 class="heading-tertiary u-margin-bottom-small">Congrats &ndash; You just won the great mind and talent. Don't miss it.</h3>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Congrats &ndash; You just won the great platform-setter and talent. Don't miss it.</h3>
                     <p class="popup__text">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
-                        amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
-                        sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
-                        gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
-                        Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+                        The webdev platform is making one of the most drastic shifts in its history. 
+                        Falling behind over the last couple of years is like passing up a chance to grow, and it will affect all the financial figures.                   
+                        This won't happen as I will vigrously stay fine-tuned for you.
+                        Imagine you jumped on the wagon and updated your wordpress theme to the latest. The challenge, if you didn't have in mind, was to ensure all of your settings including plugns reinstalled,as the update would have erased them all. You should have used a copy of plugins and child theme in the first place. 
                         vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
                         vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
                         euismod nisi porta.
                     </p>
-                    <a href="#" class="btn btn--green">check it out now!</a>
+                    <a href="#" class="btn btn--green">contact me</a>
                 </div>
             </div>
         </div>
@@ -495,7 +490,13 @@ export sass from './sass';<!DOCTYPE html>
             </div>
         </section>
         -->
-        <a name="myinfo"></a>
+
+     <!--https://codepen.io/leetony/pen/xmEObg?editors=1010#code-area t-shape skill chart  -->
+     <p data-height="700" data-theme-id="dark" data-slug-hash="xmEObg" data-default-tab="html,result" data-user="leetony" data-pen-title="T-Shape_skill_bg" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/leetony/pen/xmEObg/">T-Shape_skill_bg</a> by LeeTony (<a href="https://codepen.io/leetony">@leetony</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+        
+     <!-- learning curve infogram -->
+     <a name="myinfo"></a>
         <div id ="infogram" class="infogram-embed" data-id="1de8371e-9b72-40c6-9534-c657f03de203" data-type="interactive" data-title="tonyleekorea Learning Curves"></div><script>!function(e,t,s,i){var n="InfogramEmbeds",o=e.getElementsByTagName("script")[0],d=/^http:/.test(e.location)?"http:":"https:";if(/^\/{2}/.test(i)&&(i=d+i),window[n]&&window[n].initialized)window[n].process&&window[n].process();else if(!e.getElementById(s)){var r=e.createElement("script");r.async=1,r.id=s,r.src=i,o.parentNode.insertBefore(r,o)}}(document,0,"infogram-async","https://e.infogram.com/js/dist/embed-loader-min.js");</script><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;border-top:1px solid #dadada;margin:0 30px"><a href="https://infogram.com/1de8371e-9b72-40c6-9534-c657f03de203" style="color:#989898!important;text-decoration:none!important;" target="_blank" name="infogram">tonyleekorea Learning Curves</a><br><a href="https://infogram.com" style="color:#989898!important;text-decoration:none!important;" target="_blank" rel="nofollow">Infogram</a></div>
     </body>
 </html>
