--- a/advanced-css-course-master/Natours/final-after-S06/index.html
+++ b/advanced-css-course-master/Natours/final-after-S06/index.html
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-1-of-3 flex-container" style="display:flex">
+                    <div class="col-1-of-3 flex-container" >
                        <div class="card">
                            <div class="card__side card__side--front">
                                 <div class="card__picture card__picture--1">
@@ -197,7 +197,7 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--2">hard coding &Rarr;this one</span>
+                                    <span class="card__heading-span card__heading-span--2">hard coding <br>&Rarr;this one</span>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
