--- a/advanced-css-course-master/Natours/final-after-S06/index.html
+++ b/advanced-css-course-master/Natours/final-after-S06/index.html
@@ -6,9 +6,11 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"
 
         <!--<link rel="stylesheet" href="css/icon-font.css">-->
 
+        <link rel="stylesheet" href="css/icon.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
@@ -124,7 +126,7 @@
                             <i class="feature-box__icon icon-basic-compass"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">first hard coding</h3>
                             <p class="feature-box__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente.
                             </p>
                         </div>
                     </div>
@@ -134,7 +136,7 @@
                             <i class="feature-box__icon icon-basic-map"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">ecommerce moudule exposure</h3>
                              <p class="feature-box__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             </p>
                         </div>
                     </div>
@@ -144,7 +146,7 @@
                             <i class="feature-box__icon icon-basic-heart"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">blog and wordpress</h3>
                             <p class="feature-box__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, ipsum sapiente aspernatur.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             </p>
                         </div>
                     </div>
@@ -154,7 +156,7 @@
             <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
-                       Most popular self-evaluation
+                       Most reliable self-evaluation
                     </h2>
                 </div>
 
@@ -165,6 +167,7 @@
                                 <div class="card__picture card__picture--1">
                                     &nbsp;
                                 </div>
+                                
                                 <h4 class="card__heading">
                                     <span class="card__heading-span card__heading-span--1">all-round player</span>
                                 </h4>
@@ -173,7 +176,6 @@
                                         <li>codepn and github pro: 100+ pens and 27 repos</li>
                                         <li>Gulp/webpack: mixin,BEM for playing with plugins</li>
                                         <li>bootstrap/wordpress; multiple installation</li>
-                                        <li>mobile first concept</li>
                                     </ul>
                                 </div>
                            </div>
@@ -257,7 +259,7 @@
                 </div>
 
                 <div class="u-center-text u-margin-top-huge">
-                    <a href="#" class="btn btn--green">Live preview!</a>
+                    <a href="http://eozz.cafe24.com/portfolio2/index.html" class="btn btn--green">Live preview!</a>
                 </div>
             </section>
 
