completed adding texts to each slides of woman characters. I don't know how to remove the untracked file travel-site-files from staging. So here it is    inlcuded

--- a/advanced-css-course-master/pf_gsap/index.html
+++ b/advanced-css-course-master/pf_gsap/index.html
@@ -819,7 +819,7 @@
        <div class="info-wrap">
        <h3>Nine</h3>
        <h5>The Funk </h5>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus, ipsum vel lobortis rhoncus, lorem nisl congue tortor, eu elementum ligula metus id elit. Pellentesque efficitur vestibulum dolor at ultricies.</p>
+   <p>what is the best years for the funks to thrive throughout the American history! You guessed it right It was 1990s. As the 2k gloom and dread looms over, it was almost palpable and obvious that life is precious one. No time to waste and have fun. This is the decade of my time, in age and in life. From that time on, almost three decases has passed, and I am preparing myself another three decases, hence 35 years left dying. Or coding.</p>
       <button>Learn More</button>
       </div>
 </section>
@@ -828,7 +828,7 @@
        <div class="info-wrap">
        <h3>Ten</h3>
        <h5>Reagan </h5>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus, ipsum vel lobortis rhoncus, lorem nisl congue tortor, eu elementum ligula metus id elit. Pellentesque efficitur vestibulum dolor at ultricies.</p>
+   <p>When  Regan is concerned, my favorite writer has come to surface. Tom Clancy. I read all of his books. I traveled to South America and most of the countries his novels were based on. It was truly amazing. Most people remember the Hunt for Red October staring Sean Connery. I got married and thought to live happily ever after.... life wouldn't deal you not so softly, though. Living high off the hog is not exactly what you imagined, but the otherwise wasn't exactly what you were prepared for too.</p>
       <button>Learn More</button>
       </div>
 </section>
@@ -836,7 +836,7 @@
        <div class="info-wrap">
        <h3>Eleven</h3>
        <h5>The Dot-Com Boom </h5>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus, ipsum vel lobortis rhoncus, lorem nisl congue tortor, eu elementum ligula metus id elit. Pellentesque efficitur vestibulum dolor at ultricies.</p>
+   <p>The boom emerged back in force and take the root in my life. Its saga still lingers and I guess no one would think it would end soon now. It has bridged and stretched over and quantum jumped over times and spaces. Its existance is our human existance. No one can aruge out of this truth.</p>
       <button>Learn More</button>
       </div>
     </section>
@@ -844,7 +844,7 @@
       <div class="info-wrap">
        <h3>Twelve</h3>
        <h5>The New Millenium </h5>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc cursus, ipsum vel lobortis rhoncus, lorem nisl congue tortor, eu elementum ligula metus id elit. Pellentesque efficitur vestibulum dolor at ultricies.</p>
+   <p>I will leave this page blank. Open to any possibilities.</p>
       <button>Learn More</button>
       </div>
 
