make sure you have used the right syntax for linking js files and css files

--- a/UdemyTinDog/index.html
+++ b/UdemyTinDog/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TinDog</title>
+  <title>TinDog</title>  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -149,6 +150,8 @@
 
   </footer>
 
+<script rel="stylesheet" type="text/javascript" link="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script rel="stylesheet" type="text/javascript" link="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.min.js"></script>
 
 </body>
 
